:bug: Fix unexpected behavior on mobile

--- a/src/scss/_mobile.scss
+++ b/src/scss/_mobile.scss
@@ -2,17 +2,17 @@
 
 @media (max-width: $mobile) {
   .header {
-    max-width: $mobile;
+    width: 100%;
     margin-top: 0;
     &__title {
-      top: 80px;
-      width: 80%;
+      top: 150px;
+      width: 90%;
       padding-right: 30px;
-      height: 500px;
+      height: 520px;
       h4 {
         margin-top: 1rem;
         font-size: 1.5rem;
-        line-height: 1.7rem;
+        line-height: 1.5rem;
       }
       h1 {
         font-size: 3.2rem;
@@ -29,17 +29,22 @@
       }
     }
     &__image {
+      position: relative;
       top: 0;
-      height: 520px;
+      width: 100%;
       img {
+        position: absolute;
         top: 0;
-        height: 520px;
+        left: 0;
+        width: 100%;
+        height: 620px;
+        object-fit: cover;
       }
     }
   }
 
   .information {
-    max-width: $mobile;
+    width: 90%;
     grid-template-columns: repeat(2, 1fr);
   }
 
@@ -60,7 +65,7 @@
   }
 
   .products {
-    max-width: $mobile;
+    width: 100%;
     height: auto;
     &__title {
       flex-direction: column;
@@ -70,6 +75,15 @@
       width: 90%;
       gap: 1rem;
       grid-template-columns: repeat(2, 1fr);
+      &__item {
+        img {
+          width: 100%;
+          height: auto;
+        }
+        p {
+          font-size: 1.4rem;
+        }
+      }
     }
     &__buttons {
       margin: 2rem auto;
@@ -83,7 +97,7 @@
     height: 1050px;
   }
   .podcast {
-    max-width: $mobile;
+    width: 100%;
     height: auto;
     img {
       max-width: 300px;
